--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "vite-plugin-require": "^1.1.10",
     "vue": "^3.2.0",
+    "vue-i18n": "^9.2.2",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
